# expense-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: schema.md  sequence.md
expense_agent/: .env.example  __init__.py  agent.py  callbacks.py  config.py
expense_agent/agents/: __init__.py  journal_agent.py  ocr_agent.py  review_agent.py
expense_agent/prompts/: __init__.py
expense_agent/prompts/agents/: journal_instruction.yaml  ocr_instruction.yaml  review_instruction.yaml
expense_agent/prompts/global/: account_rules.yaml  base_context.yaml  tax_rules.yaml
expense_agent/prompts/root/: output_format.yaml  system_instruction.yaml
expense_agent/prompts/rules/: account_rules.yaml  output_format.yaml  tax_rules.yaml
expense_agent/schemas/: __init__.py  enums.py  journal.py  receipt.py  review.py
expense_agent/tools/: __init__.py  journal_tools.py  ocr_tools.py  review_tools.py
